--- a/lib/template.html
+++ b/lib/template.html
@@ -9,6 +9,25 @@
                 rect[data-level='<%= i %>'] { fill: <%= c %> }
             <% }) %>
             rect[data-level='-1'] { display: none; }
+            <% if (process.argv.indexOf("--big") !== -1) { %>
+                .calendar {
+                    width: <%= levels.length * 12.12 + 40 %>px;
+                }
+
+                svg.js-calendar-graph-svg {
+                    width: 100% !important;
+                }
+
+                body {
+                    overflow-x: auto;
+                    padding: 10px;
+                }
+
+                .calendar-graph {
+                    width: auto;
+                    padding: 8px;
+                }
+            <% } %>
         </style>
     </head>
     <body>
@@ -23,7 +42,7 @@
                             <% levels.forEach(function (cWeek) { %>
                                 <g transform="translate(<%= WEEK_X %>, 0)">
                                 <% cWeek.forEach(function (cDayLevel) { %>
-                                    <rect class="day" width="10" height="10" x="<%= DAY_X %>" y="<%= DAY_Y %>" data-level="<%= cDayLevel.level %>"></rect>
+                                    <rect class="day" width="10" height="10" x="<%= DAY_X %>" y="<%= DAY_Y %>" data-level="<%= cDayLevel.level %>" data-date="<%= cDayLevel.date %>"></rect>
                                 <% DAY_Y += 12; %>
                                 <% }) %>
                                 <% DAY_Y = 0; %>
