Fix loading of css file
Fix loading of css file after ownership change of github-calendar

--- a/lib/template.html
+++ b/lib/template.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title></title>
-        <link rel="stylesheet" href="https://ionicabizau.github.io/github-calendar/dist/github-calendar.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="https://bloggify.github.io/github-calendar/dist/github-calendar.css" type="text/css" media="screen" charset="utf-8">
         <style>
             <% theme.levels.forEach(function (c, i) { %>
                 rect[data-level='<%= i %>'] { fill: <%= c %> }
